[tool.poetry]
name = "electrosale-net"
version = "0.1.0"
description = "TechStack for electronic sales network app"
authors = ["Edenerus <markeev.25@mail.ru>"]
readme = "README.md"
packages = [{include = "electrosale_net"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
django = "^4.2.1"
docker = "6.0.1"
pytest = "^7.3.1"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
